@@ -88,43 +88,14 @@ ISDN is supported, but not during the installation.
 
 </para>
 
-  <sect3 arch="not-s390" id="nics-firmware">
-  <title>Drivers Requiring Firmware</title>
-<para>
-
-The installation system currently does not support retrieving firmware.
-This means that any network cards that use a driver that requires firmware
-to be loaded, is not supported by default.
-
-</para><para>
-
-If there is no other NIC you can use during the installation, it is still
-possible to install &debian; using a full CD-ROM or DVD image. Select the
-option to not configure a network and install using only the packages
-available from the CD/DVD. You can then install the driver and firmware you
-need after the installation is completed (after the reboot) and configure
-your network manually. Note that the firmware may be packaged separately
-from the driver and may not be available in the <quote>main</quote> section
-of the &debian; archive.
-
-</para><para>
-
-If the driver itself <emphasis>is</emphasis> supported, you may also be
-able to use the NIC during installation by copying the firmware from some
-medium to <filename>/usr/lib/hotplug/firmware</filename>. Don't forget to
-also copy the firmware to that location for the installed system before
-the reboot at the end of the installation.
-
-</para>
-  </sect3>
-
   <sect3 condition="supports-wireless" id="nics-wireless">
   <title>Wireless Network Cards</title>
 <para>
 
-Wireless NICs are in general supported as well, with one big proviso.
-A lot of wireless adapters require drivers that are either non-free or have
-not been accepted into the official Linux kernel. These NICs can generally
+Wireless networking is in general supported as well and a growing number of
+wireless adapters is supported by the official Linux kernel, although many
+of them do require firmware to be loaded.
+Wireless NICs that are not supported by the official Linux kernel can generally
 be made to work under &debian;, but are not supported during the installation.
 
 </para><para>
