@@ -37,6 +37,14 @@ at the hardware needed to load installer components (e.g. your CD-ROM or
 network card). As not all drivers may be available during this first run,
 hardware detection needs to be repeated later in the process.
 
+</para><para arch="not-s390">
+
+During hardware detection &d-i; checks if any of the drivers for the
+hardware devices in your system require firmware to be loaded. If any
+firmware is requested but unavailable, a dialog will be displayed that
+allows the missing firmware to be loaded from a removable medium.
+See <xref linkend="loading-firmware"/> for further details.
+
 </para>
 
 &module-lowmem.xml;
